--- a/android/RestoClient/res/layout/main.xml
+++ b/android/RestoClient/res/layout/main.xml
@@ -1,10 +1,174 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+android:id="@+id/widget30"
+android:layout_width="fill_parent"
+android:layout_height="fill_parent"
+android:orientation="vertical">
+  <TextView android:id="@+id/widget28" android:text="Vandaag" android:textSize="30sp" android:gravity="center"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">" 
-    <TextView
+    android:layout_height="wrap_content" />
+  <LinearLayout android:id="@+id/widget36"
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:gravity="left|center_vertical"
+    android:padding="5dp" >
+    <ImageView android:id="@+id/widget34"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:src="@drawable/icon_soup" />
+    <TextView android:id="@+id/widget31"
+      android:layout_marginLeft="5dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Soep"
+      android:textSize="20dp" />
+  </LinearLayout>
+  <View android:layout_width="fill_parent" android:layout_height="2dp" android:background="@drawable/line" />
+
+  <TableLayout android:id="@+id/widget102"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    android:layout_marginLeft="40dp"
+    android:layout_marginRight="40dp"
+    android:stretchColumns="1">
+    <TableRow android:id="@+id/widget103"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content">
+      <TextView android:id="@+id/widget76"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Hello Android from Thomas Meire :D"/>
+        android:text="Kervelsoep" />
+      <TextView android:id="@+id/widget76"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:text="€ 0.50" />
+    </TableRow>
+  </TableLayout>
+
+  <LinearLayout android:id="@+id/widget36"
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:gravity="left|center_vertical"
+    android:padding="5dp" >
+    <ImageView android:id="@+id/widget34"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:src="@drawable/icon_meal" />
+    <TextView android:id="@+id/widget31"
+      android:layout_marginLeft="5dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Vlees &amp; Veggie"
+      android:textSize="20dp" />
+  </LinearLayout>
+  <View android:layout_width="fill_parent" android:layout_height="2dp" android:background="@drawable/line" />
+
+  <TableLayout android:id="@+id/widget102"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    android:layout_marginLeft="40dp"
+    android:layout_marginRight="40dp"
+    android:stretchColumns="1">
+    <TableRow android:id="@+id/widget103"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content">
+      <TextView android:id="@+id/widget76"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Steak#" />
+      <TextView android:id="@+id/widget76"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:text="€ 3.60" />
+    </TableRow>
+    <TableRow android:id="@+id/widget103"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content">
+      <TextView android:id="@+id/widget76"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Viscubes provençales" />
+      <TextView android:id="@+id/widget76"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:text="€ 2.90" />
+    </TableRow>
+    <TableRow android:id="@+id/widget103"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content">
+      <TextView android:id="@+id/widget76"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Gegratineerde macaroni" />
+      <TextView android:id="@+id/widget76"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:text="€ 3.20" />
+    </TableRow>
+    <TableRow android:id="@+id/widget103"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content">
+      <TextView android:id="@+id/widget76"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Veg. gierst kaasschnitzel" />
+      <TextView android:id="@+id/widget76"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:text="€ 3.60" />
+    </TableRow>
+  </TableLayout>
+
+  <LinearLayout android:id="@+id/widget36"
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:gravity="left|center_vertical"
+    android:padding="5dp" >
+    <ImageView android:id="@+id/widget34"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:src="@drawable/icon_vegetables" />
+    <TextView android:id="@+id/widget31"
+      android:layout_marginLeft="5dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Groenten"
+      android:textSize="20dp" />
+  </LinearLayout>
+  <View android:layout_width="fill_parent" android:layout_height="2dp" android:background="@drawable/line" />
+
+  <TableLayout android:id="@+id/widget102"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    android:layout_marginLeft="40dp"
+    android:layout_marginRight="40dp"
+    android:stretchColumns="1">
+    <TableRow android:id="@+id/widget103"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content">
+      <TextView android:id="@+id/widget76"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Brocolli" />
+    </TableRow>
+    <TableRow android:id="@+id/widget103"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content">
+      <TextView android:id="@+id/widget76"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Lentegroenten" />
+    </TableRow>
+  </TableLayout>
 </LinearLayout>
