List of resto's in scraper + about dialog
* Add a small "about" dialog
* Remove android marker in favor of stock "star_on" marker
* Add a list of resto's with info to the scraper in json format

--- a/android/RestoClient/res/menu/viewmap.xml
+++ b/android/RestoClient/res/menu/viewmap.xml
@@ -3,4 +3,7 @@
     <item android:id="@+id/show_map"
           android:icon="@android:drawable/ic_menu_mapmode"
           android:title="@string/show_map" />
+    <item android:id="@+id/show_about"
+          android:icon="@android:drawable/ic_menu_info_details"
+          android:title="@string/about" />
 </menu>
