--- a/android/RestoClient/res/menu/viewmap.xml
+++ b/android/RestoClient/res/menu/viewmap.xml
@@ -3,6 +3,9 @@
     <item android:id="@+id/show_map"
           android:icon="@android:drawable/ic_menu_mapmode"
           android:title="@string/show_map" />
+    <item android:id="@+id/clear_menu_cache"
+          android:icon="@drawable/ic_menu_refresh"
+          android:title="@string/refresh" />
     <item android:id="@+id/show_about"
           android:icon="@android:drawable/ic_menu_info_details"
           android:title="@string/about" />
