--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -1,116 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ViewFlipper  xmlns:android="http://schemas.android.com/apk/res/android"
-android:id="@+id/flipper"
-android:layout_width="fill_parent"
-android:layout_height="fill_parent" />
-
-<!---<LinearLayout
-android:orientation="vertical">
-  <TextView android:id="@+id/day" android:text="Vandaag" android:textSize="30sp" android:gravity="center"
-  android:layout_width="fill_parent"
-  android:layout_height="wrap_content" />
-
-  <ScrollView
-  android:layout_width="fill_parent"
-  android:layout_height="fill_parent">
-
-    <LinearLayout
-      android:orientation="vertical"
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content">
-      <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="left|center_vertical"
-        android:padding="5dp" >
-        <ImageView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:src="@drawable/icon_soup" />
-        <TextView
-          android:layout_marginLeft="5dp"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="@string/soup"
-          android:textSize="20dp" />
-      </LinearLayout>
-      <View android:layout_width="fill_parent" android:layout_height="2dp" android:background="@android:drawable/divider_horizontal_dim_dark" />
-
-      <TableLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:stretchColumns="1">
-        <TableRow
-          android:layout_width="fill_parent"
-          android:layout_height="wrap_content">
-          <TextView android:id="@+id/soup"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
-          <TextView android:id="@+id/soup_price"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="right" />
-        </TableRow>
-      </TableLayout>
-
-      <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="left|center_vertical"
-        android:padding="5dp" >
-        <ImageView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:src="@drawable/icon_meal" />
-        <TextView
-          android:layout_marginLeft="5dp"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="@string/meat"
-          android:textSize="20dp" />
-      </LinearLayout>
-      <View android:layout_width="fill_parent" android:layout_height="2dp" android:background="@android:drawable/divider_horizontal_dim_dark" />
-
-      <TableLayout android:id="@+id/meat"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:stretchColumns="1" />
-
-      <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="left|center_vertical"
-        android:padding="5dp" >
-        <ImageView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:src="@drawable/icon_vegetables" />
-        <TextView
-          android:layout_marginLeft="5dp"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="@string/vegetables"
-          android:textSize="20dp" />
-      </LinearLayout>
-      <View android:layout_width="fill_parent" android:layout_height="2dp" android:background="@android:drawable/divider_horizontal_dim_dark" />
-
-      <TableLayout android:id="@+id/vegetables"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:stretchColumns="1" />
-    </LinearLayout>
-  </ScrollView>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+  <android.support.v4.view.ViewPager
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/pager"/>
 </LinearLayout>
--->
