--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:zeus="http://schemas.android.com/apk/res/be.ugent.zeus.resto.client"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+
+  <be.ugent.zeus.resto.client.ui.SwipeyTabs
+		android:id="@+id/tabs"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		zeus:bottomBarColor="#0A1E60"
+    zeus:tabTextColor="#FFB300"
+		zeus:bottomBarHeight="3dip"
+		zeus:tabIndicatorHeight="3dip"
+    android:background="#110A1E60" />
+  
   <android.support.v4.view.ViewPager
+    android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/pager"/>
+    android:background="#11FFB300" />
 </LinearLayout>
