some spacing things

--- a/android/res/layout/tab_indicator.xml
+++ b/android/res/layout/tab_indicator.xml
@@ -19,8 +19,10 @@
     android:id="@+id/tab_label"
     android:layout_width="wrap_content"
     android:layout_height="38dp"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    android:paddingBottom="3dp"
+    android:paddingTop="4dp"
     android:gravity="center"
     android:focusable="true"
     android:singleLine="true"
