--- a/android/res/layout/restomap.xml
+++ b/android/res/layout/restomap.xml
@@ -6,5 +6,5 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:clickable="true"
-    android:apiKey="0uSCij6tT_I79fi8iPyHByBGqRVw6dS9n8royKg"
+    android:apiKey=""
 />
