--- a/android/res/layout/schamper_list_item.xml
+++ b/android/res/layout/schamper_list_item.xml
@@ -1,32 +1,21 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="10dp"
-    android:paddingRight="5dp"
-    android:paddingLeft="5dp">
+    android:paddingLeft="10dp">
 
   <TextView android:id="@+id/schamper_item_title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="3dp"
-        android:gravity="center_horizontal"
         android:textStyle="bold"
-        android:textSize="20dp">
+        android:textSize="15dp">
   </TextView>
   <TextView android:id="@+id/schamper_item_date"
-        android:gravity="center_horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
   </TextView>
-  <ScrollView android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="5dp">
-    <TextView android:id="@+id/schamper_item_content"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-    </TextView>
-  </ScrollView>
 </LinearLayout>
