--- a/android/res/menu/viewmap.xml
+++ b/android/res/menu/viewmap.xml
@@ -2,8 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/clear_menu_cache"
           android:icon="@drawable/ic_menu_refresh"
-          android:title="@string/refresh" />
+          android:title="@string/refresh"
+          android:showAsAction="ifRoom" />
     <item android:id="@+id/show_about"
           android:icon="@android:drawable/ic_menu_info_details"
-          android:title="@string/about" />
+          android:title="@string/about"
+          android:showAsAction="ifRoom" />
 </menu>
