--- a/android/res/menu/heracles.xml
+++ b/android/res/menu/heracles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/refresh"
-      android:icon="@drawable/ic_menu_refresh"
-      android:title="@string/refresh"
+    <item android:id="@+id/settings"
+      android:icon="@android:drawable/ic_menu_preferences"
+      android:title="@string/settings"
       android:showAsAction="ifRoom" />
 </menu>
