--- a/android/res/layout/heracles.xml
+++ b/android/res/layout/heracles.xml
@@ -13,10 +13,13 @@
         style="@style/DashboardButton"
         android:text="@string/btn_calendar"
         android:drawableTop="@drawable/calendar" />
-  <Button android:id="@+id/home_btn_info"
-        style="@style/DashboardButton"
-        android:text="@string/btn_locations"
-        android:drawableTop="@drawable/ic_action_flag" />
+
+  <Button
+      android:id="@+id/home_btn_info"
+      style="@style/DashboardButton"
+      android:drawableTop="@drawable/ic_action_flag"
+      android:text="@string/btn_info" />
+
   <Button android:id="@+id/home_btn_menu"
         style="@style/DashboardButton"
         android:text="@string/btn_menu"
