--- a/android/res/layout/hydra.xml
+++ b/android/res/layout/hydra.xml
@@ -6,28 +6,22 @@
     android:layout_height="fill_parent">
 
   <Button android:id="@+id/home_btn_news"
-        style="@style/DashboardButton"
-        android:text="@string/btn_news"
-        android:drawableTop="@drawable/newspaper" />
+  		style="@style/DashboardButton"
+  		android:drawableTop="@drawable/nieuws"/>
   <Button android:id="@+id/home_btn_calendar"
         style="@style/DashboardButton"
-        android:text="@string/btn_calendar"
-        android:drawableTop="@drawable/calendar" />
-
-  <Button
-      android:id="@+id/home_btn_info"
-      style="@style/DashboardButton"
-      android:drawableTop="@drawable/ic_action_flag"
-      android:text="@string/btn_info" />
+        android:drawableTop="@drawable/activiteiten" />
+  <Button android:id="@+id/home_btn_info"
+      	style="@style/DashboardButton"
+      	android:drawableTop="@drawable/info"/>
 
   <Button android:id="@+id/home_btn_menu"
         style="@style/DashboardButton"
-        android:text="@string/btn_menu"
-        android:drawableTop="@drawable/fork_and_knife" />
+        android:drawableTop="@drawable/resto" />
   <Button android:id="@+id/home_btn_gsr"
         style="@style/DashboardButton"
-        android:text="@string/btn_gsr" />
+        android:drawableTop="@drawable/gsr"/>
   <Button android:id="@+id/home_btn_schamper"
         style="@style/DashboardButton"
-        android:text="@string/btn_schamper" />
+        android:drawableTop="@drawable/schamper"/>
 </be.ugent.zeus.resto.client.ui.DashboardLayout>
