--- a/android/res/layout/hydra.xml
+++ b/android/res/layout/hydra.xml
@@ -1,26 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<be.ugent.zeus.resto.client.ui.DashboardLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<be.ugent.zeus.resto.client.ui.DashboardLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-
-  <Button android:id="@+id/home_btn_news"
-  		style="@style/DashboardButton"
-  		android:drawableTop="@drawable/news"/>
-  <Button android:id="@+id/home_btn_calendar"
-        style="@style/DashboardButton"
-        android:drawableTop="@drawable/activities" />
-  <Button android:id="@+id/home_btn_info"
-      	style="@style/DashboardButton"
-      	android:drawableTop="@drawable/info"/>
-  <Button android:id="@+id/home_btn_menu"
-        style="@style/DashboardButton"
-        android:drawableTop="@drawable/restomenu" />
-  <Button android:id="@+id/home_btn_gsr"
-        style="@style/DashboardButton"
-        android:drawableTop="@drawable/gsr"/>
-  <Button android:id="@+id/home_btn_schamper"
-        style="@style/DashboardButton"
-        android:drawableTop="@drawable/schamper"/>
+    android:layout_height="fill_parent" >
+    <LinearLayout style="@style/DashboardButtonHolder">
+        <Button android:id="@+id/home_btn_news"
+            style="@style/DashboardButton"
+            android:background="@drawable/news" />
+    </LinearLayout>
+    <LinearLayout style="@style/DashboardButtonHolder">
+        <Button android:id="@+id/home_btn_calendar"
+            style="@style/DashboardButton"
+            android:background="@drawable/activities" />
+    </LinearLayout>
+    <LinearLayout style="@style/DashboardButtonHolder">
+        <Button android:id="@+id/home_btn_info"
+            style="@style/DashboardButton"
+            android:background="@drawable/info" />
+    </LinearLayout>
+    <LinearLayout style="@style/DashboardButtonHolder">
+        <Button android:id="@+id/home_btn_menu"
+            style="@style/DashboardButton"
+            android:background="@drawable/resto" />
+    </LinearLayout>
+    <LinearLayout style="@style/DashboardButtonHolder">
+        <Button android:id="@+id/home_btn_gsr"
+            style="@style/DashboardButton"
+            android:background="@drawable/gsr" />
+    </LinearLayout>
+    <LinearLayout style="@style/DashboardButtonHolder">
+        <Button android:id="@+id/home_btn_schamper"
+            style="@style/DashboardButton"
+            android:background="@drawable/schamper" />
+    </LinearLayout>
 </be.ugent.zeus.resto.client.ui.DashboardLayout>
