--- a/android/res/values/styles.xml
+++ b/android/res/values/styles.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <resources>
-	<style name="Theme.Heracles.Light" parent="@android:style/Theme.Light">
-		<item name="android:windowBackground">@color/ugent_blue_light</item>
-	</style>
+	<style name="Theme.Heracles.Light" parent="@android:style/Theme.Light" />
 
 	<style name="DashboardButtonHolder">
 		<item name="android:layout_gravity">center</item>
