--- a/android/res/layout/menu.xml
+++ b/android/res/layout/menu.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:zeus="http://schemas.android.com/apk/res/be.ugent.zeus.resto.client"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+  xmlns:zeus="http://schemas.android.com/apk/res/be.ugent.zeus.resto.client"
+  android:orientation="vertical"
+  android:layout_width="fill_parent"
+  android:layout_height="fill_parent">
 
   <be.ugent.zeus.resto.client.ui.SwipeyTabs
-		android:id="@+id/tabs"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
+    android:id="@+id/tabs"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
     android:background="@color/ugent_blue_light"
-		zeus:bottomBarColor="@color/ugent_blue_dark"
-    zeus:tabTextColor="@color/ugent_yellow_dark"
-		zeus:bottomBarHeight="3dip"
-		zeus:tabIndicatorHeight="3dip" />
-  
+    zeus:bottomBarColor="@color/ugent_blue_dark"
+    zeus:tabTextColor="@color/ugent_blue_medium"
+    zeus:bottomBarHeight="3dip"
+    zeus:tabIndicatorHeight="3dip" />
+
   <android.support.v4.view.ViewPager
     android:id="@+id/pager"
     android:layout_width="match_parent"
