--- a/android/res/menu/hydra.xml
+++ b/android/res/menu/hydra.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/settings"
-      android:icon="@android:drawable/ic_menu_preferences"
-      android:title="@string/settings"
-      android:showAsAction="ifRoom" />
+      <item android:id="@+id/feedbackButton"
+        android:icon="@drawable/button_feedback"
+        android:title="@string/inappsupport"
+        android:showAsAction="ifRoom" />
+	<!--<item android:id="@+id/feedbackButton"
+        android:icon="@android:drawable/ic_menu_preferences"
+        android:title="@string/inappsupport" />-->
 </menu>
