--- a/android/res/layout/news_list_item.xml
+++ b/android/res/layout/news_list_item.xml
@@ -4,7 +4,8 @@
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:paddingBottom="10dp"
-              android:paddingLeft="10dp">
+              android:paddingLeft="10dp"
+		  android:paddingRight="10dp">
 
   <TextView android:id="@+id/news_item_title"
             android:layout_width="fill_parent"
@@ -25,6 +26,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="3dp"
-            android:textSize="15dp">
+            android:textSize="15dp"
+		android:maxLines="4"
+		android:ellipsize="end">
   </TextView>
 </LinearLayout>
