--- a/android/res/values/arrays.xml
+++ b/android/res/values/arrays.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="timeoutNames">
-        <item>5 Minutes</item>
-        <item>15 Minutes</item>
-        <item>30 Minutes</item>
-        <item>1 Hour</item>
-        <item>2 Hours</item>
-        <item>12 Hours</item>
-        <item>1 Day</item>
+        <item>5 Minuten</item>
+        <item>15 Minuten</item>
+        <item>30 Minuten</item>
+        <item>1 Uur</item>
+        <item>2 Uren</item>
+        <item>12 Uren</item>
+        <item>1 Dag</item>
     </string-array>
     <string-array name="timeoutValues">
         <item>5</item>
