--- a/android/res/values-v11/styles.xml
+++ b/android/res/values-v11/styles.xml
@@ -16,6 +16,7 @@
 		<item name="android:background">@drawable/actionbar_background</item>
 		<item name="android:textColor">@color/ugent_white</item>
 		<item name="android:titleTextStyle">@style/Hydra.ActionBar.TitleTextStyle</item>
+		<item name="android:icon">@drawable/logo</item>
 	</style>
 
 	<style name="Hydra.ActionBar.CenteredBig" parent="@android:style/Widget.Holo.Light.ActionBar">
