Removed the red line appearing sometimes (closes #29)

--- a/android/res/layout/tab_indicator.xml
+++ b/android/res/layout/tab_indicator.xml
@@ -26,6 +26,7 @@
           android:gravity="center"
           android:focusable="true"
           android:singleLine="true"
+          android:inputType="textNoSuggestions"
           android:capitalize="characters"
           android:textSize="14sp"
           android:textStyle="bold" />
