--- a/android/res/menu/viewmap.xml
+++ b/android/res/menu/viewmap.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
     
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      android:orientation="vertical"
+      android:layout_width="fill_parent"
+      android:layout_height="fill_parent">
+    
+    <item android:id="@+id/show_map"
+          android:icon="@android:drawable/ic_menu_info_details"
+          android:title="@string/show_map"
+          android:showAsAction="ifRoom" />
     
     <item android:id="@+id/show_about"
           android:icon="@android:drawable/ic_menu_info_details"
           android:title="@string/about"
           android:showAsAction="ifRoom" />
-    <item android:id="@+id/show_about"
-          android:icon="@android:drawable/ic_menu_info_details"
-          android:title="@string/about"
-          android:showAsAction="ifRoom" />
     
     
-</LinearLayout>
+</menu>
