--- a/android/res/layout/restomap.xml
+++ b/android/res/layout/restomap.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- debug api key: -->
-<com.google.android.maps.MapView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/mapview"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:clickable="true"
-    android:apiKey="0uSCij6tT_I79fi8iPyHByBGqRVw6dS9n8royKg"
-/>
+
+<com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
+                                     android:id="@+id/mapview"
+                                     android:layout_width="match_parent"
+                                     android:layout_height="match_parent"
+                                     android:clickable="true" />
