--- a/android/res/layout/restomap.xml
+++ b/android/res/layout/restomap.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- debug api key: -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent">
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true" />
 
-<com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
-                                     android:id="@+id/mapview"
-                                     android:layout_width="match_parent"
-                                     android:layout_height="match_parent"
-                                     android:clickable="true" />
+</LinearLayout>
