--- a/android/res/menu/building_search.xml
+++ b/android/res/menu/building_search.xml
@@ -4,5 +4,5 @@
           android:title="@string/search_title"
           android:icon="@android:drawable/ic_menu_search"
           android:showAsAction="collapseActionView|ifRoom"
-          android:actionViewClass="com.actionbarsherlock.widget.SearchView" />
+          android:actionViewClass="android.widget.SearchView" />
 </menu>
