--- a/android/res/values/analytics.xml
+++ b/android/res/values/analytics.xml
@@ -7,6 +7,10 @@
     <!--Enable Activity tracking-->
     <bool name="ga_autoActivityTracking">true</bool>
 
+    <!-- Enable debug -->
+    <bool name="ga_debug">true</bool>
+
+
     <!-- The screen names that will appear in your reporting -->
     <string name="be.ugent.zeus.hydra.Hydra">Home</string>
     <string name="be.ugent.zeus.hydra.Info">Info</string>
